360375">http://bugzilla.gnome.org/show_bug.cgi?id=360375 non-ascii subject is mangled